--- a/CSS/hOme.css
+++ b/CSS/hOme.css
@@ -8,10 +8,40 @@
 #lead-div{
     display: flex;
     flex-direction: column;
-    
     align-items: center;
-   
 }
-.lead{
-    margin: 50px;
+.lead{   
+    margin-top: 100px;
+    font-size: 40px;
+}
+
+#card-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+}
+.card .btn-primary{
+    background-color: #2C2C2C;
+    border: 1px #2C2C2C solid;
+    width: 50px;
+    height: 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+
+.card{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    border: 1px solid black;
+}
+
+#h1-txt{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 70px;
 }
