--- a/sign_up/sign_upcss.css
+++ b/sign_up/sign_upcss.css
@@ -130,7 +130,42 @@ nav {
     margin: 5px 0;
     transition: all 0.3s ease;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+.signup-container{
+    width: 300px;
+    padding: 20px;
+    margin: 100px auto;
+    box-shadow:0 0 10px rgb(0, 0, 0, 0.1);
+    border-radius: 10px;
+
+
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+label{
+    margin-top: 10px;
+}
+
+input{
+    padding: 8px;
+    margin-top: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+button{
+    margin-top: 15px;
+    padding: 10px;
+    background-color: #4caf50;
+    border-radius: 5px;
+}
 @media (max-width: 1024px) {
     nav {
         padding: 1rem;
